--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        link[rel="icon"] {
+            background: #fff;
+            border-radius: 50%;
+            padding: 2px;
+            box-sizing: content-box;
+        }
+    </style>
+    <link rel="icon" type="image/png" href="images/crab.png">
     <title>Sistema de Reconocimiento de Petrolisthes</title>
     <!-- Font Awesome CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
