--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 <p>Especialista en desarrollo de sistemas expertos</p>
             </div>
             <div class="card">
-                <img src="#" alt="Estudiante Desarrollador">
+                <img src="https://via.placeholder.com/300x250/1e88e5/ffffff?text=JM" alt="Estudiante Desarrollador">
                 <h3><i class="fas fa-code"></i> Jesús Marichal</h3>
                 <p>Estudiante de Ingeniería en Sistemas</p>
                 <p>Desarrollador Full-Stack</p>
