cambio de nombres

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             </div>
             <div class="card">
                 <img src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?w=300&h=250&fit=crop&crop=face" alt="Gabriel Rosas">
-                
+
                 <h3><i class="fas fa-laptop-code"></i> Gabriel Rosas</h3>
                 <p>Estudiante de Ingeniería en Sistemas</p>
                 <p>Analista de Sistemas</p>
@@ -215,7 +215,7 @@
         <div class="species-grid">
             <div class="species-card">
             <div class="species-image-container">
-                <img src="images/Cangrejos/Petrolishes marginatus2.JPG" alt="Petrolisthes marginatus" class="species-image">
+                <img src="images/Cangrejos/Petrolishes_marginatus.jpg" alt="Petrolisthes marginatus" class="species-image">
             </div>
             <div class="species-info">
                 <h3>Petrolisthes marginatus</h3>
@@ -235,7 +235,7 @@
 
             <div class="species-card">
             <div class="species-image-container">
-                <img src="images/Cangrejos/Petrolisthes armatus.png" alt="Petrolisthes armatus" class="species-image">
+                <img src="images/Cangrejos/petrolisthes_armatus.png" alt="Petrolisthes armatus" class="species-image">
             </div>
             <div class="species-info">
                 <h3>Petrolisthes armatus</h3>
@@ -255,7 +255,7 @@
 
             <div class="species-card">
             <div class="species-image-container">
-                <img src="images/Cangrejos/Petrolisthes galathinus.png" alt="Petrolisthes galathinus" class="species-image">
+                <img src="images/Cangrejos/petrolisthes_galathinus.png" alt="Petrolisthes galathinus" class="species-image">
             </div>
             <div class="species-info">
                 <h3>Petrolisthes galathinus</h3>
@@ -275,7 +275,7 @@
 
             <div class="species-card">
             <div class="species-image-container">
-                <img src="images/Cangrejos/Petrolisthes jugosus.png" alt="Petrolisthes jugosus" class="species-image">
+                <img src="images/Cangrejos/petrolisthes_jugosus.png" alt="Petrolisthes jugosus" class="species-image">
             </div>
             <div class="species-info">
                 <h3>Petrolisthes jugosus</h3>
@@ -294,7 +294,7 @@
             </div>
             <div class="species-card">
             <div class="species-image-container">
-                <img src="images/Cangrejos/Petrolisthes lewisis.png" alt="Petrolisthes lewisis" class="species-image">
+                <img src="images/Cangrejos/petrolisthes_lewisi.png" alt="Petrolisthes lewisi" class="species-image">
             </div>
             <div class="species-info">
                 <h3>Petrolisthes lewisis</h3>
@@ -314,7 +314,7 @@
 
             <div class="species-card">
             <div class="species-image-container">
-                <img src="images/Cangrejos/Petrolisthes politus.png" alt="Petrolisthes politus" class="species-image">
+                <img src="images/Cangrejos/petrolisthes_politus.png" alt="Petrolisthes politus" class="species-image">
             </div>
             <div class="species-info">
                 <h3>Petrolisthes politus</h3>
@@ -334,7 +334,7 @@
 
             <div class="species-card">
             <div class="species-image-container">
-                <img src="images/Cangrejos/Petrolisthes tonsorius.jpg" alt="Petrolisthes tonsorius" class="species-image">
+                <img src="images/Cangrejos/petrolisthes_tonsorius.jpg" alt="Petrolisthes tonsorius" class="species-image">
             </div>
             <div class="species-info">
                 <h3>Petrolisthes tonsorius</h3>
@@ -354,7 +354,7 @@
 
             <div class="species-card">
             <div class="species-image-container">
-                <img src="images/Cangrejos/Petrolisthes Tridentatus.png" alt="Petrolisthes tridentatus" class="species-image">
+                <img src="images/Cangrejos/petrolisthes_tridentatus.png" alt="Petrolisthes tridentatus" class="species-image">
             </div>
             <div class="species-info">
                 <h3>Petrolisthes tridentatus</h3>
