cambio: incluido imagen de profesor

--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
                 <p>Contribuyó con las especificaciones técnicas y científicas necesarias para el correcto funcionamiento del sistema de identificación de especies de Petrolisthes.</p>
             </div>
             <div class="card">
-                <img src="https://via.placeholder.com/300x250/26a69a/ffffff?text=Colaborador" alt="Colaborador 2">
+                <img src="images/ProfesorSistemaExperto.jpg" alt="Colaborador 2">
                 <h3><i class="fas fa-user-nurse"></i>Profesor Jose Gregorio Murillo</h3>
                 <br>    
                 <p><strong>Especialista en Informática y Biología Marina</strong></p>
