cambio: incluido foto de creador de sistema

--- a/index.html
+++ b/index.html
@@ -155,22 +155,22 @@
             <div class="card">
                 <img src="images/ProgramaGerman.png" alt="Estudiante Investigador">
                 <h3><i class="fas fa-user-graduate"></i> Germán Gonzalez</h3>
-                <p>Estudiante de Ingeniería en Sistemas</p>
+                <p>Estudiante de Licenciatura en Informática</p>
                 <p>Investigador principal del proyecto</p>
                 <p>Especialista en desarrollo de sistemas expertos</p>
             </div>
             <div class="card">
                 <img src="https://via.placeholder.com/300x250/1e88e5/ffffff?text=JM" alt="Estudiante Desarrollador">
                 <h3><i class="fas fa-code"></i> Jesús Marichal</h3>
-                <p>Estudiante de Ingeniería en Sistemas</p>
+                <p>Estudiante de Licenciatura en Informática</p>
                 <p>Desarrollador Full-Stack</p>
                 <p>Especialista en bases de datos y algoritmos</p>
             </div>
             <div class="card">
-                <img src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?w=300&h=250&fit=crop&crop=face" alt="Gabriel Rosas">
+                <img src="images/Gabriel.png" alt="Gabriel Rosas">
 
                 <h3><i class="fas fa-laptop-code"></i> Gabriel Rosas</h3>
-                <p>Estudiante de Ingeniería en Sistemas</p>
+                <p>Estudiante de Licenciatura en Informática</p>
                 <p>Analista de Sistemas</p>
                 <p>Especialista en interfaz de usuario y testing</p>
             </div>
