--- a/index.html
+++ b/index.html
@@ -153,14 +153,14 @@
         <h2>Creadores del Sistema</h2>
         <div class="card-container">
             <div class="card">
-                <img src="images/ProgramaGerman.png" alt="Estudiante Investigador">
+                <img src="images/German.jpg" alt="Estudiante Investigador">
                 <h3><i class="fas fa-user-graduate"></i> Germán Gonzalez</h3>
                 <p>Estudiante de Licenciatura en Informática</p>
                 <p>Investigador principal del proyecto</p>
                 <p>Especialista en desarrollo de sistemas expertos</p>
             </div>
             <div class="card">
-                <img src="https://via.placeholder.com/300x250/1e88e5/ffffff?text=JM" alt="Estudiante Desarrollador">
+                <img src="images/Marichal.png" alt="Estudiante Desarrollador">
                 <h3><i class="fas fa-code"></i> Jesús Marichal</h3>
                 <p>Estudiante de Licenciatura en Informática</p>
                 <p>Desarrollador Full-Stack</p>
