--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <div class="card-container">
             <div class="card">
                 <img src="images/German.jpg" alt="Estudiante Investigador">
-                <h3><i class="fas fa-user-graduate"></i> Germán Gonzalez</h3>
+                <h3><i class="fas fa-user-graduate"></i> Germán González</h3>
                 <p>Estudiante de Licenciatura en Informática</p>
                 <p>Investigador principal del proyecto</p>
                 <p>Especialista en desarrollo de sistemas expertos</p>
