cambio: lewisis a magdalenensis, acentos y correcion de nombre

--- a/index.html
+++ b/index.html
@@ -203,11 +203,9 @@
         </div>
     </section>
 
-    <section id="especies" class="species-section">
-        <h2 style="color: #1e88e5; text-align: center;" class="animate-in">🦀 Especies de Petrolisthes Identificables</h2>
-        <div style="text-align: center; margin-bottom: 3rem;">
+    <section id="especies" class="species-section"<h2 style="color: #1e88e5; text-align: center;" class="animate-in">🦀 Especies de <em>Petrolisthes</em> Identificables</h2<div style="text-align: center; margin-bottom: 3rem;">
             <p style="font-size: 1.3rem; color: #90caf9; line-height: 1.6; max-width: 800px; margin: 0 auto;">
-                Nuestro sistema experto está especializado en la identificación de 8 especies distintas del género Petrolisthes. 
+                Nuestro sistema experto está especializado en la identificación de 8 especies distintas del género <em>Petrolisthes</em>. 
                 Cada una con características únicas que nuestro algoritmo puede reconocer con alta precisión.
             </p>
         </div>
@@ -218,7 +216,7 @@
                 <img src="images/Cangrejos/Petrolishes_marginatus.jpg" alt="Petrolisthes marginatus" class="species-image">
             </div>
             <div class="species-info">
-                <h3>Petrolisthes marginatus</h3>
+                <h3><em>Petrolisthes marginatus</em></h3>
                 <p class="species-description">
                 Especie caracterizada por sus márgenes distintivos y coloración particular. 
                 Comúnmente encontrada en zonas rocosas intermareales del Caribe. 
@@ -237,7 +235,7 @@
                 <img src="images/Cangrejos/petrolisthes_armatus.png" alt="Petrolisthes armatus" class="species-image">
             </div>
             <div class="species-info">
-                <h3>Petrolisthes armatus</h3>
+                <h3><em>Petrolisthes armatus</em></h3>
                 <p class="species-description">
                 Conocido por su robusta estructura corporal y quelípedos bien desarrollados. 
                 Una de las especies más comunes en aguas tropicales. 
@@ -256,7 +254,7 @@
                 <img src="images/Cangrejos/petrolisthes_galathinus.png" alt="Petrolisthes galathinus" class="species-image">
             </div>
             <div class="species-info">
-                <h3>Petrolisthes galathinus</h3>
+                <h3><em>Petrolisthes galathinus</em></h3>
                 <p class="species-description">
                 Especie con patrones de coloración únicos y morfología característica. 
                 Habita en fondos arenosos y rocosos de aguas someras. 
@@ -275,7 +273,7 @@
                 <img src="images/Cangrejos/petrolisthes_jugosus.png" alt="Petrolisthes jugosus" class="species-image">
             </div>
             <div class="species-info">
-                <h3>Petrolisthes jugosus</h3>
+                <h3><em>Petrolisthes jugosus</em></h3>
                 <p class="species-description">
                 Distinguido por sus características jugosas y textura particular del caparazón. 
                 Especie endémica de ciertas regiones del Caribe venezolano. 
@@ -290,10 +288,10 @@
             </div>
             <div class="species-card">
             <div class="species-image-container">
-                <img src="images/Cangrejos/petrolisthes_lewisi.png" alt="Petrolisthes lewisi" class="species-image">
+                <img src="images/Cangrejos/petrolisthes_magdalenensis.png" alt="Petrolisthes lewisi" class="species-image">
             </div>
             <div class="species-info">
-                <h3>Petrolisthes lewisis</h3>
+                <h3><em> petrolisthes magdalenensis</em></h3>
                 <p class="species-description">
                 Especie reconocida por su coloración verdosa y presencia en ambientes rocosos costeros. 
                 Destaca por su capacidad de camuflaje y adaptabilidad ecológica. 
@@ -312,7 +310,7 @@
                 <img src="images/Cangrejos/petrolisthes_politus.png" alt="Petrolisthes politus" class="species-image">
             </div>
             <div class="species-info">
-                <h3>Petrolisthes politus</h3>
+                <h3><em>Petrolisthes politus</em></h3>
                 <p class="species-description">
                 Caracterizado por su superficie lisa y pulida que le da nombre. 
                 Una de las especies más elegantes del género Petrolisthes. 
@@ -331,7 +329,7 @@
                 <img src="images/Cangrejos/petrolisthes_tonsorius.jpg" alt="Petrolisthes tonsorius" class="species-image">
             </div>
             <div class="species-info">
-                <h3>Petrolisthes tonsorius</h3>
+                <h3><em>Petrolisthes tonsorius</em></h3>
                 <p class="species-description">
                 Especie con características morfológicas distintivas en sus apéndices. 
                 Habita en zonas de alta diversidad biológica marina. 
@@ -350,15 +348,15 @@
                 <img src="images/Cangrejos/petrolisthes_tridentatus.png" alt="Petrolisthes tridentatus" class="species-image">
             </div>
             <div class="species-info">
-                <h3>Petrolisthes tridentatus</h3>
+                <h3><em>Petrolisthes tridentatus</em></h3>
                 <p class="species-description">
-                Distinguido por sus tres proyecciones características que le dan nombre. 
+                Distinguido por sus tres lóbulos frontales que le dan nombre. 
                 Especie con alta importancia ecológica en ecosistemas marinos. 
                 <strong>Reconocimiento especializado con 95% de efectividad</strong> 
-                utilizando análisis de proyecciones morfológicas.
+                utilizando análisis de la región frontal del caparazón.
                 </p>
                 <div class="species-features">
-                <span class="feature-tag">🔱 Tres proyecciones</span>
+                <span class="feature-tag">🔱 Tres lóbulos frontales</span>
                 <span class="feature-tag">🌿 Importancia ecológica</span>
                 </div>
             </div>
@@ -394,13 +392,13 @@
             </div>
             <div class="card">
                 <img src="images/ProfesorSistemaExperto.jpg" alt="Colaborador 2">
-                <h3><i class="fas fa-user-nurse"></i>Profesor Jose Gregorio Murillo</h3>
+                <h3><i class="fas fa-user-nurse"></i>Profesor José Gregorio Morillo</h3>
                 <br>    
                 <p><strong>Especialista en Informática y Biología Marina</strong></p>
                 <br>
                 <p>Universidad de Oriente Núcleo-Nueva Esparta</p>
                 <br>
-                <p>Contribuyó con la guia del proyecto, proporciono al experto para contribuir con diseño del sistema
+                <p>Contribuyó con la guía del proyecto, proporcionó al experto para contribuir con diseño del sistema
                     y la documentación del sistema.</p>
             </div>
         </div>
