cambio de descripcion

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         <div class="species-grid">
             <div class="species-card">
             <div class="species-image-container">
-                <img src="images/Cangrejos/Petrolishes_marginatus.jpg" alt="Petrolisthes marginatus" class="species-image">
+                <img src="images/Cangrejos/Petrolishes_marginatus.jpg" alt="<em>Petrolisthes marginatus</em>" class="species-image">
             </div>
             <div class="species-info">
                 <h3><em>Petrolisthes marginatus</em></h3>
@@ -232,7 +232,7 @@
 
             <div class="species-card">
             <div class="species-image-container">
-                <img src="images/Cangrejos/petrolisthes_armatus.png" alt="Petrolisthes armatus" class="species-image">
+                <img src="images/Cangrejos/petrolisthes_armatus.png" alt="<em>Petrolisthes armatus</em>" class="species-image">
             </div>
             <div class="species-info">
                 <h3><em>Petrolisthes armatus</em></h3>
@@ -251,7 +251,7 @@
 
             <div class="species-card">
             <div class="species-image-container">
-                <img src="images/Cangrejos/petrolisthes_galathinus.png" alt="Petrolisthes galathinus" class="species-image">
+                <img src="images/Cangrejos/petrolisthes_galathinus.png" alt="<em>Petrolisthes galathinus</em>" class="species-image">
             </div>
             <div class="species-info">
                 <h3><em>Petrolisthes galathinus</em></h3>
@@ -270,13 +270,13 @@
 
             <div class="species-card">
             <div class="species-image-container">
-                <img src="images/Cangrejos/petrolisthes_jugosus.png" alt="Petrolisthes jugosus" class="species-image">
+                <img src="images/Cangrejos/petrolisthes_jugosus.png" alt="<em>Petrolisthes jugosus</em>" class="species-image">
             </div>
             <div class="species-info">
                 <h3><em>Petrolisthes jugosus</em></h3>
                 <p class="species-description">
                 Distinguido por sus características jugosas y textura particular del caparazón. 
-                Especie endémica de ciertas regiones del Caribe venezolano. 
+                Especie endémica de ciertas regiones del Caribe. 
                 <strong>Algoritmo especializado con 89% de precisión diagnóstica</strong> 
                 para esta especie específica.
                 </p>
@@ -288,10 +288,10 @@
             </div>
             <div class="species-card">
             <div class="species-image-container">
-                <img src="images/Cangrejos/petrolisthes_magdalenensis.png" alt="Petrolisthes lewisi" class="species-image">
+                <img src="images/Cangrejos/petrolisthes_magdalenensis.png" alt="<em>Petrolisthes magdalenensis</em>" class="species-image">
             </div>
             <div class="species-info">
-                <h3><em> petrolisthes magdalenensis</em></h3>
+                <h3><em>Petrolisthes magdalenensis</em></h3>
                 <p class="species-description">
                 Especie reconocida por su coloración verdosa y presencia en ambientes rocosos costeros. 
                 Destaca por su capacidad de camuflaje y adaptabilidad ecológica. 
@@ -307,13 +307,12 @@
 
             <div class="species-card">
             <div class="species-image-container">
-                <img src="images/Cangrejos/petrolisthes_politus.png" alt="Petrolisthes politus" class="species-image">
+                <img src="images/Cangrejos/petrolisthes_politus.png" alt="<em>Petrolisthes politus</em>" class="species-image">
             </div>
             <div class="species-info">
                 <h3><em>Petrolisthes politus</em></h3>
                 <p class="species-description">
                 Caracterizado por su superficie lisa y pulida que le da nombre. 
-                Una de las especies más elegantes del género Petrolisthes. 
                 <strong>Sistema de identificación con 90% de confiabilidad</strong> 
                 basado en análisis de textura superficial.
                 </p>
@@ -326,7 +325,7 @@
 
             <div class="species-card">
             <div class="species-image-container">
-                <img src="images/Cangrejos/petrolisthes_tonsorius.jpg" alt="Petrolisthes tonsorius" class="species-image">
+                <img src="images/Cangrejos/petrolisthes_tonsorius.jpg" alt="<em>Petrolisthes tonsorius</em>" class="species-image">
             </div>
             <div class="species-info">
                 <h3><em>Petrolisthes tonsorius</em></h3>
@@ -345,7 +344,7 @@
 
             <div class="species-card">
             <div class="species-image-container">
-                <img src="images/Cangrejos/petrolisthes_tridentatus.png" alt="Petrolisthes tridentatus" class="species-image">
+                <img src="images/Cangrejos/petrolisthes_tridentatus.png" alt="<em>Petrolisthes tridentatus</em>" class="species-image">
             </div>
             <div class="species-info">
                 <h3><em>Petrolisthes tridentatus</em></h3>
