--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     </section>
 
     <section id="creadores">
-        <h2>Creadores del Sistema</h2>
+        <h2>Desarrolladores del Sistema</h2>
         <div class="card-container">
             <div class="card">
                 <img src="images/German.jpg" alt="Estudiante Investigador">
@@ -220,7 +220,7 @@
                 <p class="species-description">
                 Especie caracterizada por sus márgenes distintivos y coloración particular. 
                 Comúnmente encontrada en zonas rocosas intermareales del Caribe. 
-                <strong>Nuestro sistema identifica esta especie con 94% de precisión</strong> 
+                <strong>Nuestro sistema identifica esta especie con 95% de precisión</strong> 
                 basándose en patrones morfológicos específicos.
                 </p>
                 <div class="species-features">
@@ -239,7 +239,7 @@
                 <p class="species-description">
                 Conocido por su robusta estructura corporal y quelípedos bien desarrollados. 
                 Una de las especies más comunes en aguas tropicales. 
-                <strong>Identificación automatizada con 92% de efectividad</strong> 
+                <strong>Identificación automatizada con 95% de efectividad</strong> 
                 mediante análisis de características morfométricas.
                 </p>
                 <div class="species-features">
@@ -258,7 +258,7 @@
                 <p class="species-description">
                 Especie con patrones de coloración únicos y morfología característica. 
                 Habita en fondos arenosos y rocosos de aguas someras. 
-                <strong>Sistema de reconocimiento con 91% de confiabilidad</strong> 
+                <strong>Sistema de reconocimiento con 95% de confiabilidad</strong> 
                 utilizando redes neuronales profundas.
                 </p>
                 <div class="species-features">
@@ -277,7 +277,7 @@
                 <p class="species-description">
                 Distinguido por sus características jugosas y textura particular del caparazón. 
                 Especie endémica de ciertas regiones del Caribe. 
-                <strong>Algoritmo especializado con 89% de precisión diagnóstica</strong> 
+                <strong>Algoritmo especializado con 95% de precisión diagnóstica</strong> 
                 para esta especie específica.
                 </p>
                 <div class="species-features">
@@ -295,7 +295,7 @@
                 <p class="species-description">
                 Especie reconocida por su coloración verdosa y presencia en ambientes rocosos costeros. 
                 Destaca por su capacidad de camuflaje y adaptabilidad ecológica. 
-                <strong>Identificación automatizada con 93% de precisión</strong> 
+                <strong>Identificación automatizada con 95% de precisión</strong> 
                 basada en patrones morfológicos y de coloración únicos.
                 </p>
                 <div class="species-features">
@@ -313,7 +313,7 @@
                 <h3><em>Petrolisthes politus</em></h3>
                 <p class="species-description">
                 Caracterizado por su superficie lisa y pulida que le da nombre. 
-                <strong>Sistema de identificación con 90% de confiabilidad</strong> 
+                <strong>Sistema de identificación con 95% de confiabilidad</strong> 
                 basado en análisis de textura superficial.
                 </p>
                 <div class="species-features">
@@ -332,7 +332,7 @@
                 <p class="species-description">
                 Especie con características morfológicas distintivas en sus apéndices. 
                 Habita en zonas de alta diversidad biológica marina. 
-                <strong>Algoritmo de reconocimiento con 88% de precisión</strong> 
+                <strong>Algoritmo de reconocimiento con 95% de precisión</strong> 
                 especializado en características de apéndices.
                 </p>
                 <div class="species-features">
@@ -365,7 +365,7 @@
         <div class="cta-section" style="background: linear-gradient(135deg, #1e88e5, #26a69a); padding: 3rem; border-radius: 20px; margin: 4rem 0; text-align: center; box-shadow: 0 8px 32px rgba(30, 136, 229, 0.4);">
             <h3 style="color: white; margin-bottom: 1.5rem; font-size: 2.2rem;">🚀 ¡Prueba Nuestro Sistema Ahora!</h3>
             <p style="color: #e3f2fd; font-size: 1.3rem; line-height: 1.8; margin-bottom: 2rem; max-width: 800px; margin-left: auto; margin-right: auto;">
-                Con más de <strong>91% de precisión promedio</strong> en la identificación de estas 8 especies de Petrolisthes, 
+                Con más de <strong>95% de precisión promedio</strong> en la identificación de estas 8 especies de Petrolisthes, 
                 nuestro sistema experto representa una herramienta invaluable para investigadores, estudiantes y entusiastas de la biología marina.
             </p>
             <div style="background: rgba(255, 255, 255, 0.2); padding: 2rem; border-radius: 15px; margin-top: 2rem;">
